--- a/src/main/resources/ui/index.html
+++ b/src/main/resources/ui/index.html
@@ -108,6 +108,7 @@
 
 <script src="js/vue/vue.min.js"></script>
 <script src="js/axios/axios.min.js"></script>
+<script src="js/md5.js"></script>
 <script >
 
 	var V = new Vue({
@@ -136,9 +137,20 @@
 				}
                 //置空当前redirectUrl
 				V.redirectUrl = '';
+				var appKey = 'common';
+				var appSecret = '123456';
+				var ts = new Date().getTime();
+				var headersParam ={
+					appKey: appKey,
+					ts: ts,
+					appSecret: appSecret,
+					sign: hex_md5(appKey+ts+appSecret)
+				}
 				axios.post('/link/convert', {
 						origin: V.origin,
-					}
+					}, {
+							headers: headersParam
+						}
 				).then((response) => {
 					let d = response.data;
 					V.redirectUrl = d.redirectUrl;
