加入接口验签功能

--- a/src/main/resources/ui/index.html
+++ b/src/main/resources/ui/index.html
@@ -138,7 +138,7 @@
                 //置空当前redirectUrl
 				V.redirectUrl = '';
 				var appKey = 'common';
-				var appSecret = '123456';
+				var appSecret = 'qVcgGihocBye6QGoETL53ruti8ZKvuqvYIcQOXuZmGigz3tgxky5UjlDWh7EWIPF';
 				var ts = new Date().getTime();
 				var headersParam ={
 					appKey: appKey,
